--- a/src/css/absenceCss.css
+++ b/src/css/absenceCss.css
@@ -40,7 +40,6 @@ body{
   width: 100%;
   height: 5vh;
 
-
 }
 .line{
   background-color: black;
@@ -50,12 +49,54 @@ body{
 }
 
 @media only screen and (min-width: 600px) {
-  /* For tablets: */
+  header {
+    display: flex;
+    width: 100%;
+    height: 12vh;
+    flex-direction: column;
+  }
+  .menu {
+    width: 3vh;
+    margin: 2vh 2vh;
+  }
+  .banner {
+    display: flex;
+    justify-content: space-between;
+  }
+  #logo {
+    height: 120px;
+    padding: 1vh 1vh 1vh 1vh;
+  }
+  .greenRectangle {
+    background-color: #4cb770;
+    width: 100%;
+    height: 1vh;
+  }
+  body {
 
+  }
+  .title {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    text-align: center;
+    flex-wrap: wrap;
+    font-size: 25pt;
+    width: 100%;
+    height: 5vh;
+  }
+  .title div {
+    margin-right: 10px;
+    margin-left: 20px;
+  }
+  .line {
+    background-color: black;
+    width: 100%;
+    height: 1px;
+
+  }
 }
 
-@media only screen and (min-width: 768px) {
-  /* For desktop: */
 
-}
 
