--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,9 +1,13 @@
 /* For mobile phones: */
 header {
     display: flex;
-    width: 100%;
-    height: 10vh;
+    width: 99%;
+    height: 11vh;
     flex-direction: column;
+}
+.banner {
+    display: flex;
+    justify-content: space-between;
 }
 
 .mobile {
@@ -16,19 +20,12 @@ header {
 
 .menu {
     width: 3vh;
-    margin: 2vh 2vh;
+    margin: 2vh 6vh;
 }
-
-.banner {
-    display: flex;
-    justify-content: space-between;
-}
-
 #logo {
-    height: 120px;
+    height: 80%;
     padding: 1vh 1vh 1vh 1vh;
 }
-
 .greenRectangle {
     background-color: #4CB770;
     width: 100%;
@@ -50,4 +47,10 @@ header {
     background-color: black;
     width: 100%;
     height: 1px;
+}
+@media screen and (max-width: 768px) {
+    #logo {
+        height: 40%;
+        padding: 1vh 1vh 1vh 1vh;
+    }
 }
