--- a/src/css/style.css
+++ b/src/css/style.css
@@ -58,7 +58,7 @@ header {
     padding: 1vh 1vh 1vh 1vh;
   }
 }
-@media only screen and (min-width: 768px) {
+@media only screen and (orientation: landscape) {
   .mobile {
     display: none;
   }
